# P2P-networking

./: 127.0.0.1.json  127.0.0.2.json  127.0.0.3.json  Cargo.toml  README.md  archi.txt  consigne.rs  foo.json  foo.txt
src/: bin.rs  main.rs
src/network/: controller.rs  mod.rs  peer.rs
