[package]
name = "massa-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# serde = { version = "1.0", features = ["derive"] }

[dependencies]
tokio = {version = "1", features = ["full"]}
mini-redis = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
