[package]
name = "massa-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "network"
path = "src/lib.rs"

[[bin]]
name = "binary"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
mini-redis = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = { version = "0.12", features = ["serde"] }
